# Aurora

./: .env.example  .gitignore  Dockerfile.sandbox  README.md  __init__.py  __main__.py  _gh3.py  aurora.json  aurora.json.example  main.py  requirements.txt  run_server.py  scan_result.txt  verify_api.py
.aurora/: SOUL.md  fts5.db-shm  fts5.db-wal
backend/: __init__.py  __main__.py  agents_md.py  approval.py  auth.py  auto_dream.py  bash_classifier.py  browser_relay.py  browser_use.py  cdp_relay.py  chronicle.py  claude_import.py  cli.py  cron_scheduler.py  deep_link.py  diff_detective.py  doc_ghost.py  dual_memory.py  elf_parser.py  goal.py  heartbeat.py  hooks_system.py  i18n.py  im_adapter.py  log_archive.py  magic_docs.py  mcp_hub.py  model_discovery.py  notifications.py  package_manager.py  plugin_hotreload.py  plugin_marketplace.py  plugin_registry.json  process_manager.py  prompt_presets.py  prompt_templates.py  provider_proxy.py  quality_gate.py  redis_cache.py  remote_control.py  (+16 more)
backend/chronicle_sidecar/: .gitignore  Cargo.toml  README.md  build.rs
backend/chronicle_sidecar/src/: main.rs
desktop/: electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts
skills/: SKILL.md
tests/: test_agent.py  test_api_security_boundaries.py  test_apply_patch.py  test_approval_bridge.py  test_auth.py  test_backend_closure.py  test_config.py  test_dual_memory.py  test_memory.py  test_model_discovery.py  test_multi_agent.py  test_new_integrations.py  test_new_integrations_v2.py  (+10 more)
(+236 files in other folders)
