[package]
name = "chronicle-sidecar"
version = "0.1.0"
edition = "2021"
description = "Aurora Chronicle screen-recording sidecar — DXGI capture + Named Pipe RPC"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_SystemServices",
] }
